--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,13 @@ li {
 .state {
   margin-top: 40px;
 }
+
+.App {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.App footer {
+  font-size: 11px;
+  margin: 10px 0;
+}
